// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add and remove a label 1`] = `
<DocumentFragment>
  <div
    aria-expanded="false"
    class="ui button item search scrolling dropdown"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      autocomplete="off"
      class="search"
      tabindex="0"
      type="text"
      value=""
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      class="divider text"
      role="alert"
    >
      Filter by labels
    </div>
    <i
      aria-hidden="true"
      class="dropdown icon"
    />
    <div
      class="menu transition labels"
      role="listbox"
    >
      <div
        aria-checked="true"
        aria-label="10 scenarios labelled \\"a\\""
        class="active item"
        role="option"
      >
        <div
          class="text labels__item"
        >
          <p>
            a 
          </p>
          <span
            class="ui grey small text"
          >
            10 scenarios
          </span>
        </div>
      </div>
      <div
        aria-checked="false"
        aria-label="30 scenarios labelled \\"c\\""
        class="item"
        role="option"
      >
        <div
          class="text labels__item"
        >
          <p>
            c 
          </p>
          <span
            class="ui grey small text"
          >
            30 scenarios
          </span>
        </div>
      </div>
      <div
        aria-checked="false"
        aria-label="20 scenarios labelled \\"b\\""
        class="item"
        role="option"
      >
        <div
          class="text labels__item"
        >
          <p>
            b 
          </p>
          <span
            class="ui grey small text"
          >
            20 scenarios
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Add and remove a label 2`] = `
<DocumentFragment>
  <div
    aria-expanded="false"
    class="ui button item search scrolling dropdown"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      autocomplete="off"
      class="search"
      tabindex="0"
      type="text"
      value=""
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      class="divider text"
      role="alert"
    >
      Filter by labels
    </div>
    <i
      aria-hidden="true"
      class="dropdown icon"
    />
    <div
      class="menu transition labels"
      role="listbox"
    >
      <div
        aria-checked="true"
        aria-label="10 scenarios labelled \\"a\\""
        class="active item"
        role="option"
      >
        <div
          class="text labels__item"
        >
          <p>
            a 
          </p>
          <span
            class="ui grey small text"
          >
            10 scenarios
          </span>
        </div>
      </div>
      <div
        aria-checked="false"
        aria-label="30 scenarios labelled \\"c\\""
        class="item"
        role="option"
      >
        <div
          class="text labels__item"
        >
          <p>
            c 
          </p>
          <span
            class="ui grey small text"
          >
            30 scenarios
          </span>
        </div>
      </div>
      <div
        aria-checked="false"
        aria-label="20 scenarios labelled \\"b\\""
        class="item"
        role="option"
      >
        <div
          class="text labels__item"
        >
          <p>
            b 
          </p>
          <span
            class="ui grey small text"
          >
            20 scenarios
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Add and remove a label 3`] = `
<DocumentFragment>
  <div
    aria-expanded="false"
    class="ui button item search scrolling dropdown"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      autocomplete="off"
      class="search"
      tabindex="0"
      type="text"
      value=""
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      class="divider text"
      role="alert"
    >
      Filter by labels
    </div>
    <i
      aria-hidden="true"
      class="dropdown icon"
    />
    <div
      class="menu transition labels"
      role="listbox"
    >
      <div
        aria-checked="true"
        aria-label="10 scenarios labelled \\"a\\""
        class="active item"
        role="option"
      >
        <div
          class="text labels__item"
        >
          <p>
            a 
          </p>
          <span
            class="ui grey small text"
          >
            10 scenarios
          </span>
        </div>
      </div>
      <div
        aria-checked="false"
        aria-label="30 scenarios labelled \\"c\\""
        class="item"
        role="option"
      >
        <div
          class="text labels__item"
        >
          <p>
            c 
          </p>
          <span
            class="ui grey small text"
          >
            30 scenarios
          </span>
        </div>
      </div>
      <div
        aria-checked="false"
        aria-label="20 scenarios labelled \\"b\\""
        class="item"
        role="option"
      >
        <div
          class="text labels__item"
        >
          <p>
            b 
          </p>
          <span
            class="ui grey small text"
          >
            20 scenarios
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Add and remove a label 4`] = `
<DocumentFragment>
  <div
    aria-expanded="true"
    class="ui active visible button item search scrolling dropdown"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      autocomplete="off"
      class="search"
      tabindex="0"
      type="text"
      value=""
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      class="divider text"
      role="alert"
    >
      Filter by labels
    </div>
    <i
      aria-hidden="true"
      class="dropdown icon"
    />
    <div
      class="menu transition visible labels"
      role="listbox"
    >
      <div
        aria-checked="true"
        aria-label="10 scenarios labelled \\"a\\""
        class="active item"
        role="option"
      >
        <div
          class="text labels__item"
        >
          <p>
            a 
          </p>
          <span
            class="ui grey small text"
          >
            10 scenarios
          </span>
        </div>
      </div>
      <div
        aria-checked="false"
        aria-label="30 scenarios labelled \\"c\\""
        class="item"
        role="option"
      >
        <div
          class="text labels__item"
        >
          <p>
            c 
          </p>
          <span
            class="ui grey small text"
          >
            30 scenarios
          </span>
        </div>
      </div>
      <div
        aria-checked="false"
        aria-label="20 scenarios labelled \\"b\\""
        class="item"
        role="option"
      >
        <div
          class="text labels__item"
        >
          <p>
            b 
          </p>
          <span
            class="ui grey small text"
          >
            20 scenarios
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Add and remove a label 5`] = `
<DocumentFragment>
  <div
    aria-expanded="true"
    class="ui active visible button item search scrolling dropdown"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      autocomplete="off"
      class="search"
      tabindex="0"
      type="text"
      value="a"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      class="divider text filtered"
      role="alert"
    >
      Filter by labels
    </div>
    <i
      aria-hidden="true"
      class="dropdown icon"
    />
    <div
      class="menu transition visible labels"
      role="listbox"
    >
      <div
        aria-checked="true"
        aria-label="10 scenarios labelled \\"a\\""
        class="active item"
        role="option"
      >
        <div
          class="text labels__item"
        >
          <p>
            a 
          </p>
          <span
            class="ui grey small text"
          >
            10 scenarios
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Add and remove a label 6`] = `
<DocumentFragment>
  <div
    aria-expanded="true"
    class="ui active visible button item search scrolling dropdown"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      autocomplete="off"
      class="search"
      tabindex="0"
      type="text"
      value="a"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      class="divider text filtered"
      role="alert"
    >
      Filter by labels
    </div>
    <i
      aria-hidden="true"
      class="dropdown icon"
    />
    <div
      class="menu transition visible labels"
      role="listbox"
    >
      <div
        aria-checked="true"
        aria-label="10 scenarios labelled \\"a\\""
        class="active item"
        role="option"
      >
        <div
          class="text labels__item"
        >
          <p>
            a 
          </p>
          <span
            class="ui grey small text"
          >
            10 scenarios
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Add and remove a label 7`] = `
<DocumentFragment>
  <div
    aria-expanded="true"
    class="ui active visible button item search scrolling dropdown"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      autocomplete="off"
      class="search"
      tabindex="0"
      type="text"
      value="a"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      class="divider text filtered"
      role="alert"
    >
      Filter by labels
    </div>
    <i
      aria-hidden="true"
      class="dropdown icon"
    />
    <div
      class="menu transition visible labels"
      role="listbox"
    >
      <div
        aria-checked="true"
        aria-label="10 scenarios labelled \\"a\\""
        class="active item"
        role="option"
      >
        <div
          class="text labels__item"
        >
          <p>
            a 
          </p>
          <span
            class="ui grey small text"
          >
            10 scenarios
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Add and remove a label 8`] = `
<DocumentFragment>
  <div
    aria-expanded="true"
    class="ui active visible button item search scrolling dropdown"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      autocomplete="off"
      class="search"
      tabindex="0"
      type="text"
      value="a"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      class="divider text filtered"
      role="alert"
    >
      Filter by labels
    </div>
    <i
      aria-hidden="true"
      class="dropdown icon"
    />
    <div
      class="menu transition visible labels"
      role="listbox"
    >
      <div
        aria-checked="true"
        aria-label="10 scenarios labelled \\"a\\""
        class="active item"
        role="option"
      >
        <div
          class="text labels__item"
        >
          <p>
            a 
          </p>
          <span
            class="ui grey small text"
          >
            10 scenarios
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`No selected labelsInUse 1`] = `
<DocumentFragment>
  <div
    aria-expanded="false"
    class="ui button item search scrolling dropdown"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      autocomplete="off"
      class="search"
      tabindex="0"
      type="text"
      value=""
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      class="divider text"
      role="alert"
    >
      Filter by labels
    </div>
    <i
      aria-hidden="true"
      class="dropdown icon"
    />
    <div
      class="menu transition labels"
      role="listbox"
    >
      <div
        aria-checked="false"
        aria-label="30 scenarios labelled \\"c\\""
        class="item"
        role="option"
      >
        <div
          class="text labels__item"
        >
          <p>
            c 
          </p>
          <span
            class="ui grey small text"
          >
            30 scenarios
          </span>
        </div>
      </div>
      <div
        aria-checked="false"
        aria-label="20 scenarios labelled \\"b\\""
        class="item"
        role="option"
      >
        <div
          class="text labels__item"
        >
          <p>
            b 
          </p>
          <span
            class="ui grey small text"
          >
            20 scenarios
          </span>
        </div>
      </div>
      <div
        aria-checked="false"
        aria-label="10 scenarios labelled \\"a\\""
        class="item"
        role="option"
      >
        <div
          class="text labels__item"
        >
          <p>
            a 
          </p>
          <span
            class="ui grey small text"
          >
            10 scenarios
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render 1 1 1`] = `
<DocumentFragment>
  <div
    aria-expanded="false"
    class="ui button item search scrolling dropdown"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      autocomplete="off"
      class="search"
      tabindex="0"
      type="text"
      value=""
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      class="divider text"
      role="alert"
    >
      Filter by labels
    </div>
    <i
      aria-hidden="true"
      class="dropdown icon"
    />
    <div
      class="menu transition labels"
      role="listbox"
    >
      <div
        aria-checked="true"
        aria-label="undefined scenarios labelled \\"Easy\\""
        class="active item"
        role="option"
      >
        <div
          class="text labels__item"
        >
          <p>
            Easy 
          </p>
          <span
            class="ui grey small text"
          >
             scenario
          </span>
        </div>
      </div>
      <div
        aria-checked="false"
        aria-label="undefined scenarios labelled \\"fun\\""
        class="item"
        role="option"
      >
        <div
          class="text labels__item"
        >
          <p>
            fun 
          </p>
          <span
            class="ui grey small text"
          >
             scenario
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Selected labelsInUse 1`] = `
<DocumentFragment>
  <div
    aria-expanded="false"
    class="ui button item search scrolling dropdown"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      autocomplete="off"
      class="search"
      tabindex="0"
      type="text"
      value=""
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      class="divider text"
      role="alert"
    >
      Filter by labels
    </div>
    <i
      aria-hidden="true"
      class="dropdown icon"
    />
    <div
      class="menu transition labels"
      role="listbox"
    >
      <div
        aria-checked="true"
        aria-label="10 scenarios labelled \\"a\\""
        class="active item"
        role="option"
      >
        <div
          class="text labels__item"
        >
          <p>
            a 
          </p>
          <span
            class="ui grey small text"
          >
            10 scenarios
          </span>
        </div>
      </div>
      <div
        aria-checked="false"
        aria-label="30 scenarios labelled \\"c\\""
        class="item"
        role="option"
      >
        <div
          class="text labels__item"
        >
          <p>
            c 
          </p>
          <span
            class="ui grey small text"
          >
            30 scenarios
          </span>
        </div>
      </div>
      <div
        aria-checked="false"
        aria-label="20 scenarios labelled \\"b\\""
        class="item"
        role="option"
      >
        <div
          class="text labels__item"
        >
          <p>
            b 
          </p>
          <span
            class="ui grey small text"
          >
            20 scenarios
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
